Attempt to fix signup button on mobile devices

--- a/sass/custom.sass
+++ b/sass/custom.sass
@@ -234,7 +234,7 @@ span.date-more
     width: 80px
     float: right
     margin-right: 0
-    padding: 5px
+    margin-left: 20px
   .starred
     background-position: center center
     -webkit-background-size: cover
